--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>個人用ポートフォリオ</title>
+    <link rel="stylesheet" href="style.css" class="css">
 </head>
 <body>
     <!-- hero section -->
     <div class="hero">
         <nav>
-            <h2>ShinCode</h2>
+            <h2 class="logo">Shin<span>Code</span></h2>
             <ul>
                 <li><a href="#">ホーム</a></li>
                 <li><a href="#">ブログ</a></li>
                 <li><a href="#">ポートフォリオ</a></li>
             </ul>
-            <button>お問い合わせ</button>
+            <div class="btn">お問い合わせ</div>
         </nav>
     </div>
 </body>
