--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- hero section -->
     <div class="hero">
         <nav>
-            <h2 class="logo">Shin<span>Code</span></h2>
+            <h2 class="logo">Izumi<span>T</span></h2>
             <ul>
                 <li><a href="#">ホーム</a></li>
                 <li><a href="#">ブログ</a></li>
@@ -19,6 +19,23 @@
             </ul>
             <div class="btn">お問い合わせ</div>
         </nav>
+        <div class="content">
+            <div class="body">
+                <div class="portfolioInfo">
+                    <h4>フロントエンドエンジニア</h4>
+                    <h1>Izumi<span>T</span></h1>
+                    <h3>HTML/CSS/JavaScript/Next.js/React/Python/Django</h3>
+                    <div class="newsletter">
+                        <form>
+                            <input type="email" name="email" placeholder="メールアドレスを入力">
+                            <input type="submit" value="お問い合わせ">
+                        </form>
+                    </div>
+                </div>
+                <img src="" alt="">
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
