--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </form>
                     </div>
                 </div>
-                <img src="" alt="">
+                <img src="./image/person.png" alt="">
             </div>
         </div>
         
