Aboutにスタイルを適用

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" class="css">
 </head>
 <body>
-    <!-- hero section -->
+    <section class="hero">
     <div class="hero">
         <nav>
             <h2 class="logo">Izumi<span>T</span></h2>
@@ -24,7 +24,7 @@
                 <div class="portfolioInfo">
                     <h4>フロントエンドエンジニア</h4>
                     <h1>Izumi<span>T</span></h1>
-                    <h3>HTML/CSS/JavaScript/Next.js/React/Python/Django</h3>
+                    <h3>HTML/CSS/JavaScript/<h3>
                     <div class="newsletter">
                         <form>
                             <input type="email" name="email" placeholder="メールアドレスを入力">
@@ -32,10 +32,23 @@
                         </form>
                     </div>
                 </div>
-                <img src="./image/person.png" alt="">
+                <img src="./image/person.png" alt=""/>
             </div>
         </div>
-        
     </div>
+    </section>
+    <section class="about">
+        <div class="main">
+            <img src="./image/person2.png" alt="person">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <h5>Web Developer & Fullstack Engineer</h5>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error odit, totam amet ex maiores corrupti consequatur perspiciatis deserunt animi? Nihil, provident cum ab rerum assumenda voluptatem praesentium eius repellat iure labore voluptatum neque itaque quos a aliquid dolorum quia necessitatibus quibusdam placeat ea? Dolores cupiditate ea magnam perferendis voluptatibus voluptas?
+                </p>
+                <button class="button">お問い合わせ</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
