--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>個人用ポートフォリオ</title>
     <link rel="stylesheet" href="style.css" class="css">
+    <link rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer" />
 </head>
 <body>
     <section class="hero">
@@ -47,6 +52,46 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error odit, totam amet ex maiores corrupti consequatur perspiciatis deserunt animi? Nihil, provident cum ab rerum assumenda voluptatem praesentium eius repellat iure labore voluptatum neque itaque quos a aliquid dolorum quia necessitatibus quibusdam placeat ea? Dolores cupiditate ea magnam perferendis voluptatibus voluptas?
                 </p>
                 <button class="button">お問い合わせ</button>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio">
+        <div class="title">
+            <h2>ポートフォリオ</h2>
+        </div>
+        <div class="box">
+            <div class="card">
+                <i class="fa-solid fa-bars"></i>
+                <h5>Web Developer</h5>
+                <div class="paragraph">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime, eum saepe officia nisi dolor necessitatibus magnam quae, laudantium facere itaque blanditiis?
+                    </p>
+                    <p style="text-align:center">
+                        <a href="#" class="button">もっと読む</a>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <i class="fa-solid fa-bell"></i>
+                <h5>Web Developer</h5>
+                <div class="paragraph">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime, eum saepe officia nisi dolor necessitatibus magnam quae, laudantium facere itaque blanditiis?
+                    </p>
+                    <p style="text-align:center">
+                        <a href="#" class="button">もっと読む</a>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <i class="fa-solid fa-code"></i>
+                <h5>Web Developer</h5>
+                <div class="paragraph">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime, eum saepe officia nisi dolor necessitatibus magnam quae, laudantium facere itaque blanditiis?
+                    </p>
+                    <p style="text-align:center">
+                        <a href="#" class="button">もっと読む</a>
+                    </p>
+                </div>
             </div>
         </div>
     </section>
