コンタクトセクションの追加

--- a/index.html
+++ b/index.html
@@ -95,5 +95,9 @@
             </div>
         </div>
     </section>
+    <section class="contact">
+        <p>気になる方は私にお問い合わせください</p>
+        <a href="#" class="contact-button">お問い合わせ</a>
+    </section>
 </body>
 </html>
