--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <i class="fa-solid fa-bars"></i>
                 <h5>Web Developer</h5>
                 <div class="paragraph">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime, eum saepe officia nisi dolor necessitatibus magnam quae, laudantium facere itaque blanditiis?
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime,
                     </p>
                     <p style="text-align:center">
                         <a href="#" class="button">もっと読む</a>
@@ -75,7 +75,7 @@
                 <i class="fa-solid fa-bell"></i>
                 <h5>Web Developer</h5>
                 <div class="paragraph">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime, eum saepe officia nisi dolor necessitatibus magnam quae, laudantium facere itaque blanditiis?
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime,
                     </p>
                     <p style="text-align:center">
                         <a href="#" class="button">もっと読む</a>
@@ -86,7 +86,7 @@
                 <i class="fa-solid fa-code"></i>
                 <h5>Web Developer</h5>
                 <div class="paragraph">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime, eum saepe officia nisi dolor necessitatibus magnam quae, laudantium facere itaque blanditiis?
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi corrupti esse debitis, maxime,
                     </p>
                     <p style="text-align:center">
                         <a href="#" class="button">もっと読む</a>
@@ -99,5 +99,23 @@
         <p>気になる方は私にお問い合わせください</p>
         <a href="#" class="contact-button">お問い合わせ</a>
     </section>
+    <footer>
+        <p>IzumiT</p>
+        <p>programing tutorial - Please subscribe to me</p>
+        <div class="social">
+            <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+        </div>
+        <div class="end">
+            copy right@izumit
+        </div>
+    </footer>
 </body>
 </html>
